fixed file input text overflow

--- a/resources/sass/_forms.scss
+++ b/resources/sass/_forms.scss
@@ -40,6 +40,8 @@ form{
         background-color: $background-lighten-2;
         border-color: $background-lighten-2;
         color: $primary-text;
+        white-space: nowrap;
+        overflow: hidden;
         &::after{
             content: "Открыть";
             background-color: $background-lighten-3;
